SONARPY-1745 Update code syntax to match Java 17 (#1753)